# haskell_ffp

./: .gitignore  Palindrome.hs  Person.hs  README.md  cap12.hs  cap22_exercises.hs  cap22_reader.hs  cap22_reader_from_scratch.hs  errata.txt  hutton.hs  phone.hs
addition/: addition.cabal
addition/exe/: Main.hs
addition/src/: Addition.hs
cap15/: README.md  cap15.cabal
cap15/src/: cap15.hs
cap16/: ChangeLog.md  README.md  cap16.cabal  package.yaml
cap16/src/: Lib.hs  ReplaceExperiment.hs
cap16/test/: Spec.hs
cap17/: ChangeLog.md  README.md  cap17.cabal  package.yaml
cap17/src/: Lib.hs  Lookups.hs
cap17/test/: Spec.hs  StructuralEqual.hs
cap18/: ChangeLog.md  README.md  cap18.cabal  package.yaml
cap18/app/: Main.hs
cap18/src/: #Lib.hs#  BadMonad.hs  Lib.hs
cap18/test/: BadMonadSpec.hs  Spec.hs
cap20/: ChangeLog.md  README.md  cap20.cabal  package.yaml
cap20/app/: Main.hs
cap20/src/: Lib.hs
cap20/test/: Spec.hs
cap21/: ChangeLog.md  README.md  cap21.cabal  package.yaml
cap21/app/: Main.hs
cap21/src/: Lib.hs
cap21/test/: Spec.hs
cap22-shawty/: README.md  cap22-shawty.cabal
cap22-shawty/src/: Main.hs
cap23/: ChangeLog.md  README.md  cap23.cabal  package.yaml
cap23/src/: FizzBuzz.hs  Moi.hs  RandomExample.hs  RandomExample2.hs
cap23/test/: Spec.hs
cap24/: ChangeLog.md  LICENSE  README.md  cap24.cabal  package.yaml
cap24/app/: Main.hs
cap24/src/: AltParsing.hs  BT.hs  Lib.hs  Log.hs  Marsh.hs  SemVer.hs  SillyIni.hs
cap24/src/Text/: Decimal.hs  Fractions.hs  Integrals.hs  Naturals.hs  PhoneNumbers.hs
cap24/test/: SemVerSpec.hs  Spec.hs
cap25/: ChangeLog.md  README.md  cap25.cabal  package.yaml
cap25/app/: Main.hs
cap25/src/: Bifunctor.hs  Lib.hs
cap26/: ChangeLog.md  README.md  cap26.cabal  package.yaml
cap26/app/: Main.hs
cap26/src/: Lib.hs
cipher/: cipher.cabal
cipher/app/: Main.hs
cipher/src/: Cipher.hs
cipher/test/: Spec.hs
hangman/: hangman.cabal
hangman/app/: Main.hs
hangman/data/: dict.txt
hangman/src/: Hangman.hs
hangman/test/: Spec.hs
hello/exe/: Main.hs
hello/src/: DogsRule.hs  Hello.hs
morse/: morse.cabal  package.yaml
morse/app/: Main.hs
morse/src/: Morse.hs
morse/test/: Spec.hs
orphan-instance/: Listy.hs  ListyInstances.hs  Makefile
quicks/: LICENSE  README.md  quicks.cabal
quicks/src/: Quicks.hs  Split.hs
quicks/test/: Spec.hs  SpecIdempotence.hs  SpecSplit.hs
urlshortener/app/: Main.hs
wordnumber/: package.yaml  wordnumber.cabal
wordnumber/src/: WordNumber.hs
wordnumber/test/: Spec.hs
