name:                addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/petrem/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Petre Mierluțiu
maintainer:          petrem@github
copyright:           Public Domain
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable addition
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , addition

library
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , hspec
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010
