name:                cap15
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/petrem/cap15#readme
license:             BSD3
license-file:        LICENSE
author:              Petre Mierluțiu
maintainer:          petrem@github
copyright:           Public Domain
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Cap15
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , hspec
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010
