name:                cap22-shawty
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/petrem/cap22-shawty#readme
license:             BSD3
license-file:        LICENSE
author:              Petre Mierluțiu
maintainer:          petrem@github
copyright:           Public Domain
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cap22-shawty
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
