name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            https://github.com/petrem/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Petre Mierluțiu
maintainer:          petrem@github
copyright:           Public Domain
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , hangman

library
  exposed-modules:
      Hangman
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , random
    , split
  default-language: Haskell2010

test-suite hangman-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   hs-source-dirs:
     test
   build-depends:
       QuickCheck
     , base >= 4.7 && < 5
     , hspec
     , hangman
   default-language: Haskell2010